Ch06_Exaustive_Search/P0158_PICNIC/workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:56:02 **** Build of configuration Debug for project picnic ****
make all 
Building file: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp"
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:6:1: warning: identifier ‘constexpr’ is a keyword in C++11 [-Wc++0x-compat]
 constexpr int MAX_STUDENTS = 10;
 ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:6:1: error: ‘constexpr’ does not name a type
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:6:1: note: C++11 ‘constexpr’ only available with -std=c++11 or -std=gnu++11
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:8:17: error: ‘MAX_STUDENTS’ was not declared in this scope
 bool areFriends[MAX_STUDENTS][MAX_STUDENTS];
                 ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:8:31: error: ‘MAX_STUDENTS’ was not declared in this scope
 bool areFriends[MAX_STUDENTS][MAX_STUDENTS];
                               ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:9:15: error: ‘MAX_STUDENTS’ was not declared in this scope
 bool selected[MAX_STUDENTS];
               ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp: In function ‘int countPairs(bool*)’:
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:14:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp: In function ‘int main()’:
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:21:10: error: ‘areFriends’ was not declared in this scope
   memset(areFriends, 0, sizeof(areFriends));
          ^
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:22:10: error: ‘selected’ was not declared in this scope
   memset(selected, 0, sizeof(selected));
subdir.mk:18: recipe for target 'main.o' failed
          ^
make: *** [main.o] Error 1
16:56:45 **** Incremental Build of configuration Debug for project picnic ****
make all 
Building file: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp"
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp: In function ‘int countPairs(bool*)’:
/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp:14:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
Finished building: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
 
Building target: picnic
Invoking: GCC C++ Linker
g++  -o "picnic"  ./main.o   
Finished building target: picnic
 
17:29:12 **** Incremental Build of configuration Debug for project picnic ****
make all 
Building file: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp"
Finished building: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
 
Building target: picnic
Invoking: GCC C++ Linker
g++  -o "picnic"  ./main.o   
Finished building target: picnic
 
17:35:30 **** Incremental Build of configuration Debug for project picnic ****
make all 
Building file: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "/media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp"
Finished building: /media/emjay/20484C78484C4EAA/Algospot/picnic/main.cpp
 
Building target: picnic
Invoking: GCC C++ Linker
g++  -o "picnic"  ./main.o   
Finished building target: picnic
 
